# cauldron

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: install-langservers.sh
assets/icon/: README.md  icon-256.rgba  install.sh
assets/toolbar/: README.md
crates/cauldron/: Cargo.toml
crates/cauldron-dap/: Cargo.toml
crates/cauldron-dap/src/: lib.rs  manager.rs  session.rs  transport.rs
crates/cauldron-dap/tests/: e2e_fake.rs  live_smoke.rs
crates/cauldron-editor/: Cargo.toml
crates/cauldron-editor/benches/: keystroke.rs
crates/cauldron-editor/src/: buffer.rs  highlight.rs  lib.rs  position.rs  selection.rs  snippet.rs  syntax.rs  templates.rs  theme.rs  view.rs
crates/cauldron-lint/: Cargo.toml
crates/cauldron-lint/src/: lib.rs  main.rs
crates/cauldron-lsp/: Cargo.toml
crates/cauldron-lsp/src/: capabilities.rs  discovery.rs  jsonrpc.rs  lib.rs  manager.rs  server.rs  transport.rs  txsync.rs
crates/cauldron-lsp/tests/: e2e_fake.rs  live_smoke.rs
crates/cauldron-psi/: Cargo.toml
crates/cauldron-psi/src/: chsig.rs  collect.rs  extract.rs  fromusage.rs  graph.rs  index.rs  invalidate.rs  lib.rs  project.rs  query.rs  rustsig.rs  tu.rs
crates/cauldron-psi/tests/: extract_smoke.rs  rust_smoke.rs  type_index_smoke.rs  zz_knr_probe.rs
crates/cauldron/src/: ai.rs  ai_actions.rs  blame.rs  boot_trace.rs  checklist.rs  chsig_ui.rs  conflicts.rs  coverage.rs  deps.rs  depsinstall.rs  diffview.rs  everywhere.rs  git.rs  history.rs  icons.rs  localhist.rs  main.rs  mdpreview.rs  nav.rs  newproject.rs  openfolder.rs  palette.rs  prpanel.rs  psi.rs  quickopen.rs  runconfig.rs  runner.rs  safewrite.rs  search.rs  settings.rs  state.rs  style.rs  symbols.rs  systheme.rs  terminal.rs  testenv.rs  testrun.rs  usage.rs  watcher.rs  webpreview.rs  (+1 more)
crates/cider/: Cargo.toml
crates/cider/src/: app.rs  clip.rs  config.rs  diag.rs  emoji.rs  fonts.rs  lib.rs  main.rs  pty.rs  session.rs  term.rs  widget.rs
crates/livewall-uikit/: Cargo.toml
crates/livewall-uikit/src/: lib.rs
docs/: claude-integration.md  phase0.md  psi-design.md  psi-spike.md  scope.md
docs/specs/: 2026-07-13-cauldron-layout-persistence-design.md
