[workspace]
resolver = "2"
members = [
    "crates/cauldron",
    "crates/cauldron-dap",
    "crates/cauldron-editor",
    "crates/cauldron-lint",
    "crates/cauldron-lsp",
    "crates/cauldron-psi",
    # Vendored from the Rune ecosystem (same author/licence) so this repo builds standalone:
    "crates/cider",
    "crates/livewall-uikit",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Camden Conrad <90994136+camdenconrad@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
# Pinned to the Rune ecosystem line (wgpu 22.1.0). Do NOT bump independently of livewall-studio.
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11", "persistence"] }
anyhow = "1"
log = "0.4"
# filesystem watcher for project-wide auto-indexing (issue #2 item 5)
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RUNE FORK of egui-winit 0.29.1 (vendored in the side-by-side livewall-studio checkout).
# Disables its smithay-clipboard path so copy/paste works under Rune (wlr-data-control via arboard).
# Fresh clones need ../livewall-studio checked out — see README.
[patch.crates-io]
egui-winit = { path = "vendor/egui-winit" }

[profile.release]
lto = "thin"
