[package]
name = "cauldron-psi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cauldron's PSI-style project index: per-file stub extraction, linkage-keyed call graph, Power-of-Ten Rule-1 (no recursion) whole-program check. Headless lib + spike CLI."

[dependencies]
# ONE version set with cauldron-editor/-lint — the tree-sitter ABI must align; never bump alone.
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-rust = "0.21"
rayon = "1"
serde_json = "1"
anyhow = "1"
ignore = "0.4"
log = { workspace = true }

[[bin]]
name = "psi-spike"
path = "src/bin/psi_spike.rs"
